--- a/index.html
+++ b/index.html
@@ -59,12 +59,14 @@
                             </p>
                             <p>
                                 Focusing on a specific industry, I can outline how the Singaporean government allocates
-                                resources to bring heal</p>
-                            <p>th startup technology to life. For example, the Ministry of
+                                resources to bring health startup technology to life. 
+                                
+                            </p>
+                            <p>For example, the Ministry of
                                 Health
                                 has worked in collaboration with National University of Singapore startup T-Rehab to
                                 develop
-                                the latest innovation in the physiotherapy industry - Smart Health TeleRehab. TeleRehab
+                                the latest innovation in the physiotherapy industry - Smart Health TeleRehab (figure 1). TeleRehab
                                 is
                                 remote physiotherapy and it’s an interesting interplay of technology. It utilizes
                                 sensors,
@@ -98,7 +100,7 @@
                             <p>
                                 The symbols include brightly colored ornamental vases, plates, bowls, and more. From
                                 lime
-                                green to bright pink porcelain, they were hard to miss and brightly displayed. A closer
+                                green to bright pink porcelain, they were hard to miss and brightly displayed (figure 2). A closer
                                 look
                                 at the patterns they’re decorated with tells the story of the community’s emphasis on
                                 aesthetic beauty and cultural identity.
@@ -166,7 +168,7 @@
                         <div class="full-content" style="display: none;">
 
                             <p>
-                                The symposium was one of my favorite workshops, where we gathered to hear from highly
+                                The symposium was one of my favorite workshops (figure 3), where we gathered to hear from highly
                                 experienced experts in the field. The case studies, especially from our Taiwanese
                                 professor
                                 and her redesign of the umbilical clamp, provided a detailed glimpse into the design
@@ -250,6 +252,26 @@
                     </div>
                 </div>
             </section>
+            <section class="carousel">
+                <div class="carousel-container">
+                    <div class="carousel-slide">
+                        <img src="img1.png" alt="Image 1">
+                        <h3>Figure 1. A client using the Telerehab system (https://www.todayonline.com/singapore/tele-rehab-option-physiotherapy-be-rolled-out-14-institutions)</h3>
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="img2.jpg" alt="Image 2">
+                        <h3>Figure 2. A porcelain vase from the Peranakan Museum</h3>
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="img3.jpg" alt="Image 3">
+                        <h3>Figure 3. The panelists from the symposium</h3>
+                    </div>
+
+                </div>
+                <button class="carousel-button prev">‹</button>
+                <button class="carousel-button next">›</button>
+            </section>
+            
         </div>
     </main>
     <footer>
